--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "esp32-snippets"
 version = "0.1.0"
-authors = ["Cyril DUPONT <cyril.dupont@ext.bpifrance.fr>"]
+authors = ["Cyril DUPONT <cyril.dupont61@gmail.fr>"]
 edition = "2021"
 resolver = "2"
 rust-version = "1.71"
@@ -24,8 +24,12 @@ experimental = ["esp-idf-svc/experimental"]
 embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
 
 [dependencies]
-log = { version = "0.4", default-features = false }
+log = { version = "0.4", default-features = false, features = [] }
 esp-idf-svc = { version = "0.47.1", default-features = false }
+esp-idf-sys = { version = "0.33.5", default-features = false }
+esp-idf-hal = { version = "0.42.3", default-features = false }
+
+#esp-println = { version = "0.7.0", features = ["esp32"] }
 
 [build-dependencies]
-embuild = "0.31.3"
+embuild = "0.31.4"
