--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,11 +25,12 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 
 [dependencies]
 log = { version = "0.4", default-features = false, features = [] }
-esp-idf-svc = { version = "0.47.1", default-features = false }
+esp-idf-svc = { version = "0.47.1", default-features = false}
 esp-idf-sys = { version = "0.33.5", default-features = false }
-esp-idf-hal = { version = "0.42.3", default-features = false }
+esp-idf-hal = { version = "0.42.4", default-features = false }
 
-#esp-println = { version = "0.7.0", features = ["esp32"] }
+embedded-svc = "0.26.1"
+embedded-hal = "1.0.0-rc.1"
 
 [build-dependencies]
 embuild = "0.31.4"
