--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ esp-idf-hal = { version = "0.42.4", default-features = false }
 
 embedded-svc = "0.26.1"
 embedded-hal = "1.0.0-rc.1"
+embedded-graphics = "0.8.1"
+
+ssd1306 = "0.8.4"
 
 [build-dependencies]
 embuild = "0.31.4"
