--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ embedded-graphics = "0.8.1"
 
 ssd1306 = "0.8.4"
 ds323x = "0.5.1"
+shared-bus = "0.3.1"
 
 [build-dependencies]
 embuild = "0.31.4"
